--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-1 Does it work?
-2    I hope Yes
-3 I'm not sure
-4    Don't be guffy man, works  perfectly.
-5 Just a test
-6 New line
+Does it work?
+	I hope Yes
+I'm not sure
+	Don't be guffy man, works  perfectly.
+Just a test
+New line
+
